--- a/main.html
+++ b/main.html
@@ -2,32 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>SigmaCoin farm</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/styles.css">
+    <title>SigmaCoins</title>
 </head>
 <body>
- <div class="container">
-    <div>СигмаКоинов:<span id="clicks">0</span></div>
-    <img id="clickableImage" class="coin" src="coin.png" alt="Coin Image" height="200" width="200">
-    <button id="resetButton" class="blue-button">сделать себя нищим (для прикола)</button>
-    <script src="script.js"></script>
-</div>
-<img id="myImg" src="cart.png" height="100px" width="100px">
-
-<!-- Модальное окно -->
-<div id="myModal" class="modal">
-  <!-- Содержимое модального окна -->
-  <div class="modal-content">
-    <span class="close">&times;</span>
-    <p>+1 КОИН ЗА КЛИК!</p>
-    <p class="firstbuff" id="buffx2">100.000</p>
-    
-  </div>
-</div>
-
-
-
-
-<script src="script.js"></script>
+    <div class="main">коины</div>
 </body>
 </html>
